cmake_minimum_required(VERSION 3.4.1)

get_filename_component(SHADERC_SRC
                       ${ANDROID_NDK}/sources/third_party/shaderc
                       ABSOLUTE)
set(GLSLANG_SPIRV_INCLUDE_DIR ${SHADERC_SRC}/third_party/glslang)
add_library(shaderc_lib STATIC IMPORTED)
set_target_properties(shaderc_lib PROPERTIES IMPORTED_LOCATION
                      ${SHADERC_SRC}/libs/${ANDROID_STL}/${ANDROID_ABI}/libshaderc.a)

get_filename_component(VIRY3D_LIB_SRC_DIR
                       ${CMAKE_SOURCE_DIR}/../../../lib/src
                       ABSOLUTE)

get_filename_component(VIRY3D_APP_SRC_DIR
                       ${CMAKE_SOURCE_DIR}/../../../app/src
                       ABSOLUTE)

set(CMAKE_C_FLAGS
    "${CMAKE_C_FLAGS} -Wall -DFT2_BUILD_LIBRARY -DIOAPI_NO_64 -DAL_LIBTYPE_STATIC -DAL_ALEXT_PROTOTYPES -DHAVE_GCC_DESTRUCTOR -DFPM_DEFAULT -DSIZEOF_INT=4")

set(CMAKE_CXX_FLAGS
    "${CMAKE_CXX_FLAGS} -std=c++11 -fexceptions -frtti -Wall -DVR_ANDROID -DVR_VULKAN=1 -DVR_GLES=0 -DVK_USE_PLATFORM_ANDROID_KHR -DFT2_BUILD_LIBRARY -DIOAPI_NO_64 -DAL_LIBTYPE_STATIC -DAL_ALEXT_PROTOTYPES -DHAVE_GCC_DESTRUCTOR -DFPM_DEFAULT -DSIZEOF_INT=4")

set(CMAKE_SHARED_LINKER_FLAGS
    "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")

add_library(Viry3DDep STATIC
            ${VIRY3D_LIB_SRC_DIR}/crypto/md5/md5.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/autofit/autofit.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftbase.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftbbox.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftbitmap.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftdebug.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftfntfmt.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftfstype.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftgasp.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftglyph.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftgxval.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftinit.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftlcdfil.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftmm.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftotval.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftpatent.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftpfr.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftstroke.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftsynth.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftsystem.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/fttype1.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftwinfnt.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/bdf/bdf.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/cache/ftcache.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/cff/cff.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/cid/type1cid.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/gzip/ftgzip.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/lzw/ftlzw.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/pcf/pcf.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/pfr/pfr.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/psaux/psaux.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/pshinter/pshinter.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/psnames/psmodule.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/raster/raster.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/sfnt/sfnt.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/smooth/smooth.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/truetype/truetype.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/type1/type1.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/type42/type42.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/winfonts/winfnt.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jaricom.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcapimin.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcapistd.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcarith.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jccoefct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jccolor.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcdctmgr.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jchuff.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcinit.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcmainct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcmarker.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcmaster.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcomapi.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcparam.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcprepct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcsample.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jctrans.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdapimin.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdapistd.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdarith.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdatadst.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdatasrc.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdcoefct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdcolor.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jddctmgr.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdhuff.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdinput.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmainct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmarker.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmaster.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmerge.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdpostct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdsample.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdtrans.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jerror.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jfdctflt.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jfdctfst.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jfdctint.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jidctflt.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jidctfst.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jidctint.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jmemmgr.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jmemnobs.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jquant1.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jquant2.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jutils.c
            ${VIRY3D_LIB_SRC_DIR}/json/json_reader.cpp
            ${VIRY3D_LIB_SRC_DIR}/json/json_value.cpp
            ${VIRY3D_LIB_SRC_DIR}/json/json_writer.cpp
            ${VIRY3D_LIB_SRC_DIR}/lua/lpeg/lpcap.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lpeg/lpcode.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lpeg/lpprint.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lpeg/lptree.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lpeg/lpvm.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lapi.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lauxlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lbaselib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lbitlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lcode.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lcorolib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lctype.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldblib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldebug.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldo.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldump.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lfunc.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lgc.c
            ${VIRY3D_LIB_SRC_DIR}/lua/linit.c
            ${VIRY3D_LIB_SRC_DIR}/lua/liolib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/llex.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lmathlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lmem.c
            ${VIRY3D_LIB_SRC_DIR}/lua/loadlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lobject.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lopcodes.c
            ${VIRY3D_LIB_SRC_DIR}/lua/loslib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lparser.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lstate.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lstring.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lstrlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ltable.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ltablib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ltm.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lundump.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lutf8lib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lvm.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lzio.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/bit.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/decoder.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/fixed.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/frame.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/huffman.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/compat.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/crc.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/field.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/frametype.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/genre.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_debug.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_file.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_frame.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_version.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/latin1.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/parse.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/render.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/tag.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/ucs4.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/utf8.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/utf16.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/util.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/layer3.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/layer12.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/mad_stream.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/mad_timer.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/synth.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/version.c
            ${VIRY3D_LIB_SRC_DIR}/noise/model/cylinder.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/model/line.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/model/plane.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/model/sphere.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/abs.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/add.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/billow.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/blend.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/cache.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/checkerboard.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/clamp.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/const.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/curve.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/cylinders.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/displace.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/exponent.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/invert.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/max.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/min.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/modulebase.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/multiply.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/perlin.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/power.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/ridgedmulti.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/rotatepoint.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/scalebias.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/scalepoint.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/select.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/spheres.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/terrace.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/translatepoint.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/turbulence.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/voronoi.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/latlon.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/noisegen.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/noiseutils.cpp
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/loopback.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/null.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/opensl.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/thread_msg_queue_cpp11.cpp
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/ALc.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/ALc_cpp11.cpp
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcConfig.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcDedicated.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcEcho.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcModulator.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcReverb.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcRing.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcThread.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/ALu.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/bs2b.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/helpers.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/hrtf.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/mixer.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/panning.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alError.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alExtension.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alListener.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alSource.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alThunk.c
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btDbvt.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btDispatcher.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btGhostObject.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btManifoldResult.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btUnionFind.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btBox2dShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btBoxShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCollisionShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCompoundShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConcaveShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConeShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvex2dShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexHullShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCylinderShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btEmptyShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btShapeHull.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btSphereShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleCallback.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleMesh.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Character/btKinematicCharacterController.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Dynamics/btRigidBody.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btAlignedAllocator.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btConvexHull.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btConvexHullComputer.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btGeometryUtil.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btPolarDecomposition.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btQuickprof.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btSerializer.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btVector3.cpp
            ${VIRY3D_LIB_SRC_DIR}/png/png.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngerror.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngget.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngmem.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngpread.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngread.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngrio.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngrtran.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngrutil.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngset.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngtrans.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwio.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwrite.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwtran.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwutil.c
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_cfg.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_cpp.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_cross.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_cross_util.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_glsl.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_hlsl.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/spirv_cross/spirv_msl.cpp
            ${VIRY3D_LIB_SRC_DIR}/xml/tinyxml2.cpp
            ${VIRY3D_LIB_SRC_DIR}/zlib/ioapi.c
            ${VIRY3D_LIB_SRC_DIR}/zlib/unzip.c)

target_include_directories(Viry3DDep PRIVATE
                           ${VIRY3D_LIB_SRC_DIR}
                           ${VIRY3D_LIB_SRC_DIR}/freetype/include
                           ${VIRY3D_LIB_SRC_DIR}/mp3/mad
                           ${VIRY3D_LIB_SRC_DIR}/openal/include
                           ${VIRY3D_LIB_SRC_DIR}/openal/android
                           ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/Include
                           ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src
                           ${VIRY3D_LIB_SRC_DIR}/lua)

add_library(Viry3D STATIC
            ${VIRY3D_LIB_SRC_DIR}/animation/Animation.cpp
            ${VIRY3D_LIB_SRC_DIR}/animation/AnimationCurve.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioClip.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioListener.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioManager.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioSource.cpp
            ${VIRY3D_LIB_SRC_DIR}/Application.cpp
            ${VIRY3D_LIB_SRC_DIR}/Debug.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Camera.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Color.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Computer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Display.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Image.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Light.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Material.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Mesh.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/MeshRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Renderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Shader.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/SkinnedMeshRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Texture.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/VertexAttribute.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/Directory.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/File.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/MemoryStream.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/Stream.cpp
            ${VIRY3D_LIB_SRC_DIR}/Input.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Bounds.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Frustum.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Mathf.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Matrix4x4.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Quaternion.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Ray.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Rect.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Vector2.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Vector3.cpp
            ${VIRY3D_LIB_SRC_DIR}/memory/ByteBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/Node.cpp
            ${VIRY3D_LIB_SRC_DIR}/Resources.cpp
            ${VIRY3D_LIB_SRC_DIR}/string/String.cpp
            ${VIRY3D_LIB_SRC_DIR}/thread/ThreadPool.cpp
            ${VIRY3D_LIB_SRC_DIR}/time/Time.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Button.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/CanvasRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Font.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Label.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/ScrollView.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/SelectButton.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Slider.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Sprite.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/SwitchButton.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/View.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/vulkan_shader_compiler.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/vulkan_wrapper/vulkan_wrapper.cpp      # for libvulkan.so load
            )

target_include_directories(Viry3D PRIVATE
                           ${VIRY3D_LIB_SRC_DIR}
                           ${VIRY3D_LIB_SRC_DIR}/freetype/include
                           ${VIRY3D_LIB_SRC_DIR}/mp3/mad
                           ${VIRY3D_LIB_SRC_DIR}/openal/include
                           ${VIRY3D_LIB_SRC_DIR}/openal/android
                           ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/Include
                           ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src
                           ${ANDROID_NDK}/sources/third_party/shaderc/include
                           ${SHADERC_SRC}/third_party/spirv-tools/include
                           ${SHADERC_SRC}/third_party/spirv-tools/include/spirv-tools)

add_library(Viry3DApp SHARED
            ${ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c
            ${CMAKE_SOURCE_DIR}/app/src/main/jni/jni.cpp
            ${VIRY3D_APP_SRC_DIR}/App.cpp)

target_include_directories(Viry3DApp PRIVATE
                           ${ANDROID_NDK}/sources/android/native_app_glue
                           ${VIRY3D_LIB_SRC_DIR}
                           ${VIRY3D_APP_SRC_DIR})

target_link_libraries(Viry3DApp
                      android log z OpenSLES EGL GLESv3
                      Viry3D Viry3DDep
                      shaderc_lib       # for vulkan shader compile
                      )

# build shaderc
# ndk-bundle/sources/third_party/shaderc
# ../../../ndk-build NDK_PROJECT_PATH=. APP_BUILD_SCRIPT=Android.mk APP_STL:=c++_shared APP_ABI=armeabi-v7a APP_PLATFORM=android-18 libshaderc_combined

